[project]
name = "empathy-chatbot-response"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "annotated-types==0.7.0",
    "blis==1.3.0",
    "catalogue==2.0.10",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "chatterbot==1.2.7",
    "cloudpathlib==0.22.0",
    "confection==0.1.5",
    "cymem==2.0.11",
    "greenlet==3.2.4",
    "idna==3.10",
    "langcodes==3.5.0",
    "language-data==1.3.0",
    "marisa-trie==1.3.1",
    "markdown-it-py==4.0.0",
    "mathparse==0.1.5",
    "mdurl==0.1.2",
    "murmurhash==1.0.13",
    "numpy==2.3.3",
    "packaging==25.0",
    "preshed==3.0.10",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.5",
    "rich==14.1.0",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart-open==7.3.1",
    "spacy==3.8.7",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "sqlalchemy==2.0.43",
    "srsly==2.5.1",
    "thinc==8.3.6",
    "tqdm==4.67.1",
    "typer==0.19.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "wasabi==1.1.3",
    "weasel==0.4.1",
    "wrapt==1.17.3",
    "en-core-web-sm",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz" }
